--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Phylogeny viewer</title>
     <script type="text/javascript" src="build/Arborist.min.js"></script>
-    <link rel="stylesheet" href="lib/jquery-ui/jquery-ui.min.css">
+    <!-- <link rel="stylesheet" href="lib/jquery-ui/jquery-ui.min.css"> -->
     <link rel="stylesheet" type="text/css" href="build/Arborist.css">
   </head>
   <body onload="main()">
