cleanup and assignment link

--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
         <br>
         <button onclick="download_tree()">Download tree</button><treeOutput></treeOutput>
         <br/>
+        <a href="Assignment.docx">Assignment instructions</a>
       </div>
       <div id="content">
         <div id="info"></div>
         <div id="data-tree"></div>
         <div id="bottom">
-          de Koning Lab, 2014
+          Ivan Kryukov @ de Koning Lab, 2014
         </div>
       </div>
   </body>
