slides, assignment and links

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
         <button onclick="download_tree()">Download tree</button><treeOutput></treeOutput>
         <br/>
         <a href="Assignment.docx">Assignment instructions</a>
+        <br/>
+        <a href="hiv.phy">Alignment file</a>
+        <br/>
+        <a href="Slides.pdf">Lecture slides</a>
       </div>
       <div id="content">
         <div id="info"></div>
