--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <br/>
         <a href="hiv.phy">Alignment file</a>
         <br/>
-        <a href="Slides.pdf">Lecture slides</a>
+        <a href="Phylogenetics.pdf">Lecture slides</a>
       </div>
       <div id="content">
         <div id="info"></div>
