--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <br>
         <button onclick="download_tree()">Download tree</button><treeOutput></treeOutput>
         <br/>
+        <a href="Assignment.pdf">Assignment instructions pdf</a>
+        <br/>
         <a href="Assignment.docx">Assignment instructions</a>
         <br/>
         <a href="hiv.phy">Alignment file</a>
