--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         <a href="hiv.phy">Alignment file</a>
         <br/>
         <a href="Phylogenetics.pdf">Lecture slides</a>
+        <br/>
+        <a href="hiv_phy_phyml_tree.txt">Tree</a>
       </div>
       <div id="content">
         <div id="info"></div>
